SigmaCodebackup3rdSep/objects/Exception_Logging__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception_Description_Max__c</fullName>
        <label>Exception Description Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception_Details_Max__c</fullName>
        <inlineHelpText>Max length of exception details</inlineHelpText>
        <label>Exception Details Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception_Logs_Purge_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Exception Logs Purge (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logging_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Logging Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Warning</label>
        <type>Checkbox</type>
    </fields>
    <label>Exception Logging</label>
</CustomObject>